@@ -1,3 +1,10 @@
+2005-05-25  Christian Schaller  <cschalle@wildsrc.fluendo.lan>
+
+	* gnl/gnltimeline.c:
+	* gnl/gnlsource.c:
+	* gnl/gnlcomposition.c:
+	GCC4 fixes
+
 2005-05-25  Edward Hervey  <bilboed@bilboed.com>
 
 	* gnl/gnlsource.c:
